--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="card">
         <h3>Portfolio Website</h3>
         <p>This site was built to showcase my journey, skills, and experience.</p>
-        <a href="https://hritik1299.github.io/Portfolio/">Live Demo</a> | <a href="#">GitHub</a>
+        <a href="https://hritik1299.github.io/Portfolio/">Live Demo</a> | <a href="https://github.com/Hritik1299/Portfolio">GitHub</a>
       </div>
       <div class="card">
         <h3>To-Do List App</h3>
